Footer tweaks and delighter alignment issue on IE

--- a/CancerGov/_src/Scripts/NCI/Modules/floatingDelighter/index.scss
+++ b/CancerGov/_src/Scripts/NCI/Modules/floatingDelighter/index.scss
@@ -58,6 +58,7 @@
   .floating-delighter {
     position: initial;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     z-index: 0;
     width: 50%;
