--- a/CancerGov/_src/StyleSheets/_footer.scss
+++ b/CancerGov/_src/StyleSheets/_footer.scss
@@ -11,7 +11,7 @@
     }
 
     h2 {
-        font-size: 1.3em;
+        font-size: 1.2em;
         font-weight: normal;
         text-transform: uppercase;
         margin-bottom: 1em;
@@ -45,6 +45,7 @@
     font-size: 23px;
 
     span {
+      font-family: $montserrat-font-stack;
       display: block;
       font-size: 16px;
     }
@@ -210,7 +211,11 @@
   }
 
   .site-footer__tagline {
-    font-size: 0.95em;
+    font-size: 1em;
+
+    * {
+      font-weight: 400;
+    } 
   }
   
 }
